--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,13 +1,13 @@
 
 /*@import url('http://fonts.googleapis.com/css?family=Chelsea+Market');
 @import url('http://fonts.googleapis.com/css?family=Fredericka+the+Great');
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic');
 @import url('http://fonts.googleapis.com/css?family=IM+Fell+English+SC');*/
 
 @import url('http://fonts.googleapis.com/css?family=Metamorphous');
-@import url('http://fonts.googleapis.com/css?family=Gentium+Basic:400,700italic,700,400italic');
 @import url('http://fonts.googleapis.com/css?family=Fredericka+the+Great');
 @import url('http://fonts.googleapis.com/css?family=Amaranth:400,700,400italic,700italic');
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic');
+@import url('http://fonts.googleapis.com/css?family=Gentium+Basic:400,700italic,700,400italic');
 
 /*
 html5doctor.com Reset Stylesheet
@@ -139,15 +139,8 @@ p {
 .popup_message.success .dismiss_me { color: #FFF; }
 .faded_out { color: #777; }
 
-#fullpage_backdrop ul.duplicate_issues { list-style-type: none; padding: 0; margin: 0; clear: both; }
-#fullpage_backdrop ul.duplicate_issues li { font-weight: normal; margin: 0 0 3px 0; text-align: left; }
-#fullpage_backdrop input[type="submit"] { font-weight: bold; }
-#fullpage_backdrop ul.duplicate_issues li input[type="checkbox"] { margin-left: 0; }
-#fullpage_backdrop ul.duplicate_issues li { padding-left: 5px; margin-bottom: 5px; }
-#fullpage_backdrop ul.duplicate_issues { margin: 10px 0 5px 0; }
-
-.fullpage_backdrop_content { position: relative; z-index: 100001; font-family: 'Open sans'; }
-.fullpage_backdrop { font-family: 'Open sans'; background-color: rgba(0, 0, 0, 0.5); z-index: 100000; width: 100%; height: 100%; overflow: auto; position: fixed; top: 0; left: 0; margin: 0; padding: 0; text-align: center; }
+.fullpage_backdrop_content { position: relative; z-index: 100001; font-family: 'Gentium Basic'; }
+.fullpage_backdrop { font-family: 'Gentium Basic'; background-color: rgba(0, 0, 0, 0.5); z-index: 100000; width: 100%; height: 100%; overflow: auto; position: fixed; top: 0; left: 0; margin: 0; padding: 0; text-align: center; }
 
 .backdrop_box { position: absolute; top: 60px; left: 50%; z-index: 100001; clear: both; padding: 0 !important; }
 .backdrop_box#reportissue_container { top: 10px; }
@@ -711,7 +704,9 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 	padding: 3px 5px !important;
 	font-size: 12px;
 	text-decoration: none;
-	box-sizing: initial;
+	box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	-webkit-box-sizing: content-box;
 	-webkit-appearance: none;
 	-o-appearance: none;
 	appearance: none;
@@ -726,6 +721,7 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 	display: inline-block;
 	vertical-align: middle;
 	text-align: center;
+	font-family: 'Open Sans';
 }
 .button:hover, input[type=submit]:hover, input[type=button]:hover, button:hover {
 	box-shadow: 0 0 2px rgba(0,0,0,0.3) !important;
@@ -1143,7 +1139,7 @@ li.card {
 .tooltip {
 	display: block;
 	position: absolute;
-	bottom: 45px;
+	bottom: 35px;
 	left: -12px;
 	font-size: 1em;
 	opacity: 0;
@@ -1162,6 +1158,18 @@ li.card {
 	width: 0;
 	height: 0;
 	padding: 0;
+}
+.tooltip.lighter {
+	background: -moz-linear-gradient(top, rgba(200, 200, 200, 1) 0%, rgba(200, 200, 200, 0.7) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(200, 200, 200, 1)), color-stop(100%,rgba(200, 200, 200, 0.7))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(200, 200, 200, 1) 0%,rgba(200, 200, 200, 0.7) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(200, 200, 200, 1) 0%,rgba(200, 200, 200, 0.7) 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, rgba(200, 200, 200, 1) 0%,rgba(200, 200, 200, 0.7) 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(200, 200, 200, 1)', endColorstr='rgba(200, 200, 200, 0.7)',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(to bottom, rgba(200, 200, 200, 1) 0%,rgba(200, 200, 200, 0.7) 100%); /* W3C */
+	color: #000;
+	border: 1px solid rgba(200, 200, 200, 0.9);
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
 }
 .tooltip.big {
 	width: 340px;
@@ -1419,14 +1427,14 @@ li.card-slot {
 	left: -320px;
 }
 .game_invites .game_invite.visible {
-	left: -295px;
-	-webkit-transition: left 0.7s ease-out;
-	-moz-transition: left 0.7s ease-out;
-	-o-transition: left 0.7s ease-out;
-	transition: left 0.7s ease-out;
+	left: -285px;
+	-webkit-transition: left 0.7s ease-in-out;
+	-moz-transition: left 0.7s ease-in-out;
+	-o-transition: left 0.7s ease-in-out;
+	transition: left 0.7s ease-in-out;
 }
 .game_invites .game_invite.visible:hover {
-	left: 0;
+	left: -10px;
 	-webkit-transition: left 0.7s ease-in-out;
 	-moz-transition: left 0.7s ease-in-out;
 	-o-transition: left 0.7s ease-in-out;
@@ -1470,7 +1478,7 @@ li.card-slot {
 	padding: 0;
 }
 .game_invites .game_invite .buttons {
-	margin: 20px 5px 5px 0;
+	margin: 20px 20px 20px 0;
 	text-align: right;
 }
 .game_invites .game_invite .buttons .button {
@@ -1499,34 +1507,69 @@ li.card-slot {
 	position: absolute;
 	left: 5px;
 	top: 5px;
+	width: 50px;
+	height: 50px;
 	margin-right: 5px;
 }
 
+.button::-moz-focus-inner { border: 0 !important; padding: 0 !important; margin: 0 !important; }
+
 .lobby_game_actions {
 	float: left;
-	width: 250px;
-	margin-right: 5px;
-	padding: 10px;
+	width: 230px;
+	margin-right: 0;
+	padding: 10px 7px 10px 10px;
 }
 .lobby_game_actions .quickmatch {
 	font-size: 1.35em;
 	font-weight: bold;
-	padding-top: 15px !important;
-	padding-bottom: 15px !important;
-	width: 250px;
+	padding: 15px 0 !important;
+	width: 227px;
+	display: block;
+}
+.lobby_game_actions .button.quickmatch .tooltip {
+	bottom: 50px;
+}
+.lobby_game_actions .button.quickmatch:hover .tooltip {
+	bottom: 55px;
+}
+.lobby_game_actions .button.play_story .tooltip:before,
+.lobby_game_actions .button.play_story .tooltip:after {
+	left: 25%;
+}
+.lobby_game_actions .button.single_quest .tooltip:before,
+.lobby_game_actions .button.single_quest .tooltip:after {
+	left: 75%;
+}
+.lobby_game_actions .button.single_quest .tooltip {
+	margin-left: -130px;
+}
+.lobby_game_actions .button .tooltip {
+	bottom: 35px;
+	text-shadow: none;
+}
+.lobby_game_actions .button:hover .tooltip {
+	bottom: 40px;
+}
+.lobby_game_actions .button:hover .tooltip {
+	font-size: 14px;
+	width: 228px;
+	left: 0;
+	font-weight: normal;
+	text-align: left;
 }
 .lobby_game_actions .button, .lobby_game_actions .button:hover {
 	-webkit-transition: box-shadow 0.5s ease, -webkit-box-shadow 0.5s ease;
 	-moz-transition: box-shadow 0.5s ease, -moz-box-shadow 0.5s ease;
 	-o-transition: box-shadow 0.5s ease;
 	transition: box-shadow 0.5s ease;
+	position: relative;
 }
 .lobby_game_actions .play_story, .lobby_game_actions .single_quest {
 	font-size: 1.1em;
 	font-weight: normal;
-	padding-top: 5px !important;
-	padding-bottom: 5px !important;
-	width: 120px;
+	padding: 5px 0 !important;
+	width: 110px;
 	margin: 5px 0;
 }
 .lobby_game_actions .play_story { 
@@ -1542,14 +1585,25 @@ li.card-slot {
 	-webkit-box-shadow: 0 0 5px rgba(101, 193, 218, 0.2), 0 0 7px rgba(101, 193, 218, 0.8), 0 0 13px rgba(101, 193, 218, 0.6) !important;
 	-moz-box-shadow: 0 0 5px rgba(101, 193, 218, 0.2), 0 0 7px rgba(101, 193, 218, 0.8), 0 0 13px rgba(101, 193, 218, 0.6) !important;
 }
-.lobby_game_actions .single_quest { float: right; }
+.lobby_game_actions .single_quest { margin-left: 5px; }
+.lobby_game_actions h3 { margin-top: 30px; }
+.my_games {
+	list-style: none;
+	margin: 10px 0 0 0;
+	padding: 0;
+}
+.my_games li {
+	margin: 0;
+	padding: 0;
+}
 
 .lobby_chat {
 	float: right;
-	width: 715px;
+	width: 740px;
 	margin: 10px 10px 0 0;
-	height: 500px;
+	height: 535px;
 	margin-bottom: 50px;
+	border-left: 1px solid rgba(255, 255, 255, 0.3);
 }
 .chat_room {
 	display: block;
@@ -1563,19 +1617,29 @@ li.card-slot {
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding: 20px 20px 15px 20px;
-	width: 675px;
-	background: -moz-linear-gradient(top, rgba(0, 0, 0, 1) 25%, rgba(0, 0, 0, 0.5) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0, 0, 0, 1)), color-stop(100%,rgba(0, 0, 0, 0.5))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 1) 25%,rgba(0, 0, 0, 0.5) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(0, 0, 0, 1) 25%,rgba(0, 0, 0, 0.5) 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, rgba(0, 0, 0, 1) 25%,rgba(0, 0, 0, 0.5) 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(0, 0, 0, 1)', endColorstr='rgba(0, 0, 0, 0.5)',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 25%,rgba(0, 0, 0, 0.5) 100%); /* W3C */
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+	padding: 10px 20px 50px 20px;
+	width: 700px;
+	font-weight: normal;
+	font-size: 0.9em;
+	background: -moz-linear-gradient(top, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0, 0, 0, 1)), color-stop(100%,rgba(0, 0, 0, 0))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 1) 50%,rgba(0, 0, 0, 0) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(0, 0, 0, 1) 50%,rgba(0, 0, 0, 0) 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, rgba(0, 0, 0, 1) 50%,rgba(0, 0, 0, 0) 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(0, 0, 0, 1)', endColorstr='rgba(0, 0, 0, 0)',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 50%,rgba(0, 0, 0, 0) 100%); /* W3C */
+	border-bottom: none;
 	z-index: 10;
 	font-family: 'Amaranth';
+}
+.chat_room header subject {
+	font-size: 1.1em;
+	font-weight: bold;
+	clear: both;
+	display: block;
+}
+.chat_room_form_container {
+	padding-left: 5px;
 }
 .chat_room_loading {
 	position: absolute;
@@ -1598,12 +1662,15 @@ li.card-slot {
 	height: 500px;
 	overflow: auto;
 	font-family: 'Amaranth';
+	box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.4);
 }
 .chat_room_lines .chat_nickname {
 	font-size: 0.8em;
 	font-weight: bold;
 	color: #AAA;
-	padding: 5px 0 0 5px;
+	padding: 0;
+	position: relative;
+	float: left;
 }
 .chat_room_lines .chat_timestamp {
 	font-weight: normal;
@@ -1619,4 +1686,87 @@ li.card-slot {
 	font-weight: normal;
 	color: #FFF;
 	padding: 0 0 5px 5px;
+	position: relative;
+}
+.chat_room_lines .chat_line .chat_line_content {
+	clear: both;
+}
+.chat_room_lines .chat_nickname:hover .tooltip:before, .chat_room_lines .chat_nickname:hover .tooltip:after {
+	border: none;
+}
+.chat_room_lines .chat_nickname .tooltip {
+	bottom: 5px;
+}
+.chat_room_lines .chat_nickname .tooltip .buttons {
+	text-align: right;
+	padding: 5px;
+}
+.chat_room_lines .chat_nickname:hover .tooltip {
+	bottom: 10px;
+	left: 2px;
+	font-size: 14px;
+	text-shadow: none;
+	font-weight: normal;
+	padding: 15px;
+}
+
+@-webkit-keyframes loading {
+	from {
+		-webkit-transform:rotate(0deg);
+	}
+	to {
+		-webkit-transform:rotate(360deg);
+	}
+}
+
+@-moz-keyframes loading {
+	from {
+		-moz-transform:rotate(0deg);
+	}
+	to {
+		-moz-transform:rotate(360deg);
+	}
+}
+
+@keyframes loading {
+	from {
+		transform:rotate(0deg);
+	}
+	to {
+		transform:rotate(360deg);
+	}
+}
+
+#quickmatch_overlay .fullpage_backdrop_content {
+	text-align: center;
+}
+
+#finding_opponent {
+	padding: 50px 0 70px 0;
+	font-size: 1.3em;
+	font-family: 'Amaranth';
+	width: 500px;
+	color: #000;
+	margin: 50px auto;
+	background-color: rgba(255, 255, 255, 1);
+	border: none;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#quickmatch_overlay.loading .fullpage_backdrop_content img {
+	-webkit-animation-name: loading;
+	-webkit-animation-duration: 2s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+	-moz-animation-name: loading;
+	-moz-animation-duration: 2s;
+	-moz-animation-iteration-count: infinite;
+	-moz-animation-timing-function: linear;
+	-moz-animation-name: loading;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	animation-name: loading;
+	margin-bottom: 25px;
 }
